<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">eBayShop</string>
    <string name="enter_keywords">Enter Keywords</string>
    <string name="keywords">Keyword</string>
    <string name="price_range">Price Range</string>
    <string name="minimum_price">Minimum Price</string>
    <string name="maximum_price">Maximum Price</string>
    <string name="condition">Condition</string>
    <string name="new_">New</string>
    <string name="used">Used</string>
    <string name="unspecified">Unspecified</string>
    <string name="sort_by">Sort By</string>
    <string name="search">SEARCH</string>
    <string name="clear">CLEAR</string>
    <string name="please_enter_mandatory_field">Please enter mandatory field</string>
    <string name="please_enter_valid_price_values">Please enter valid price values</string>
    <string-array name="sort_by_options">
        <item>Best Match</item>
        <item>Price: Highest First</item>
        <item>Price + Shipping: Highest First</item>
        <item>Price + Shipping: Lowest First</item>
    </string-array>

    <string name="result_messages">
        Showing &lt;font color=\"#1E6DE2\"> %1$d &lt;/font> results for &lt;font color=\"#1E6DE2\"> %2$s &lt;/font>
    </string>
    <string name="ic_redirect">ic_redirect</string>
    <string name="product_features">Product Features</string>
    <string name="specifications">Specifications</string>
    <string name="seller_information">Seller Information</string>
    <string name="return_policies">Return Policies</string>
    <string name="shipping_information">Shipping Information</string>

</resources>