<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        style="@style/BlueLabelText"
        android:text="@string/keywords" />

    <EditText
        android:id="@+id/keywordsTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_keywords" />

    <TextView
        android:id="@+id/keywordsWarningTextView"
        style="@style/RedWarningText"
        android:text="@string/please_enter_mandatory_field" />

    <TextView
        style="@style/BlueLabelText"
        android:text="@string/price_range" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/minPriceTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/minimum_price" />

        <EditText
            android:id="@+id/maxPriceTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/maximum_price" />

    </LinearLayout>

    <TextView
        android:id="@+id/priceRangeWarningTextView"
        android:text="@string/please_enter_valid_price_values"
        style="@style/RedWarningText"/>

    <TextView
        style="@style/BlueLabelText"
        android:text="@string/condition" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

<!-- it seems layout_weight attribute is different from what the developer guide says-->
        <CheckBox
            android:id="@+id/checkBoxNew"
            android:layout_weight="2"
            style="@style/CheckBoxText"
            android:text="@string/new_" />

        <CheckBox
            android:id="@+id/checkBoxUsed"
            style="@style/CheckBoxText"
            android:layout_weight="2"
            android:text="@string/used" />

        <CheckBox
            android:id="@+id/checkBoxUnspecified"
            android:layout_weight="1.5"
            style="@style/CheckBoxText"
            android:text="@string/unspecified" />

    </LinearLayout>

    <TextView
        style="@style/BlueLabelText"
        android:text="@string/sort_by" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSearch"
            style="@style/BlueButton"
            android:onClick="onSearch"
            android:text="@string/search" />

        <Button
            android:id="@+id/buttonClear"
            style="@style/BlueButton"
            android:onClick="onClear"
            android:text="@string/clear" />
    </LinearLayout>

</LinearLayout>
